[Rajesh] Added : Image Upload API

--- a/FundoNote/FundoNote/appsettings.json
+++ b/FundoNote/FundoNote/appsettings.json
@@ -9,6 +9,11 @@
   "ConnectionString": {
     "FundoDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FundoDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "CloudinarySettings": {
+    "cloud_name": "demvjsd0p",
+    "api_key": "182866793856758",
+    "api_secret": "MrRIycI9nqRCIFoDcBqNdSdXj38"
+  },
   "AllowedHosts": "*",
   "JWT": {
     "key": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL"
